# luplayer_mobile

./: .gitignore  README.md  changelog.md  index.html  ionic.config.json  package-lock.json  package.json  project-summary.md  quasar.config.js  tsconfig.json  vscode-profile-2023-12-10-19-53-51.cpuprofile
src/: App.vue  SoundWaveform copy.vue
src-capacitor/: capacitor.config.json  package.json
src-cordova/: config.xml  package-lock.json  package.json
src-pwa/: manifest.json
src/components/: AddSoundButton.vue  CartScreen.vue  DeleteSoundDialog.vue  LuMeter.vue  MainToolBar.vue  MainToolBarBusyRound.vue  MetersPanel.vue  PeakMeter.vue  PlayButton.vue  PlayListScreen.vue  PlayerMainPanel.vue  PlaylistFooter.vue  PlaylistRightPanel.vue  PlaylistToolBar.vue  RecordedSoundsPanel.vue  RecorderAudioSettingsPanel.vue  RecorderAudioSettingsPanelFileFormat.vue  RecorderMainPanel.vue  RecorderMainPanelAudioControls.vue  RecorderMainPanelControlButtons.vue  RecorderMainPanelMarkers.vue  RecorderMainPanelSoundName.vue  ReorderListElement.vue  ReorderPanel.vue  RightDrawer.vue  SettingsDialog.vue  SettingsDialogAbout.vue  SettingsDialogFile.vue  SettingsDialogHelp.vue  SettingsDialogPanel.vue  SettingsPanel.vue  SoundCart.vue  SoundCartFader.vue  SoundDetails.vue  SoundPlayList.vue  SoundPlayer.vue  SoundPlaylist.vue  SoundPlaylistAndCart.vue  SoundProgressBar.vue  SoundWaveform.vue  (+2 more)
src/composables/: enveloppe-gain-processor.ts  loudness-calculation.js  math-helpers.ts  needles-worker.js  (+3 more)
src/rust/waveform_process/: Cargo.toml
src/rust/waveform_process/src/: lib.rs
(+26 files in other folders)
